k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: cloudshop.local
      http:
        paths:
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /cart/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80
          - path: /order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
